fix(components): resolve z-index issue in the BitDropDown #2692 (#3228)

--- a/src/BlazorUI/Bit.BlazorUI/Components/DropDown/BitDropDown.Fluent.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/DropDown/BitDropDown.Fluent.scss
@@ -239,7 +239,6 @@
 
 .bit-drp-wrapper {
     position: relative;
-    z-index: 1000;
     outline: none;
     box-sizing: border-box;
     cursor: pointer;
